edit style and add a simple save

--- a/src/components/ArticleEditor/index.css
+++ b/src/components/ArticleEditor/index.css
@@ -4,16 +4,16 @@
   pointer-events: none; 
 }
 
-.superFancyBlockquote {
+.knBlogBlockquote {
   color: #999;
   font-family: 'Hoefler Text', Georgia, serif;
   font-style: italic;
   text-align: center;
 }
 
-.superFancyBlockquote:hover {
+.knBlogBlockquote:hover {
   color: #666;
 }
 
-.superFancyUnstyled{
+.knBlogUnstyled{
 }
