fix placeholder style

--- a/src/components/ArticleEditor/index.css
+++ b/src/components/ArticleEditor/index.css
@@ -1,9 +1,9 @@
-/* .public-DraftEditorPlaceholder-root{
+.public-DraftEditorPlaceholder-root{
   color: #999;
   position: absolute; 
   pointer-events: none; 
 }
-
+/* 
 .knBlogBlockquote {
   color: #999;
   font-family: 'Hoefler Text', Georgia, serif;
