--- a/src/components/ArticleEditor/index.css
+++ b/src/components/ArticleEditor/index.css
@@ -31,6 +31,13 @@
   margin-right:20px;
 }
 */
+
+blockquote{
+  border-left: 5px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+}
+
 figure {
   margin: 0;
   padding: 0;
